<resources>
    <string name="app_name">Session2 VIBGYOR Screen</string>
    <string name="action_settings">Settings</string>
    <string name="button_new">Button New</string>
    <string name="button_sample">Sample</string>
    <string name="text_violet">Violet</string>
    <string name="text_indigo">Indigo</string>
    <string name="text_blue">Blue</string>
    <string name="text_green">Green</string>
    <string name="text_yellow">Yellow</string>
    <string name="text_orange">Orange</string>
    <string name="text_red">Red</string>

</resources>
