<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignBottom="@+id/vibgyorLinearLayout"
    android:layout_alignParentStart="true"
    android:orientation="vertical"
    android:weightSum="@integer/vibgyor_total_size">

    <TextView
        android:id="@+id/textRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/vibgyor_size_of_one"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/text_red"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/vibgyor_size_of_one"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/text_orange"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textYellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/vibgyor_size_of_one"
        android:background="@color/yellow"
        android:gravity="center"
        android:text="@string/text_yellow"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/vibgyor_size_of_one"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/text_green"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/vibgyor_size_of_one"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/text_blue"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textIndigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/vibgyor_size_of_one"
        android:background="@color/indigo"
        android:gravity="center"
        android:text="@string/text_indigo"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViolet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="@integer/vibgyor_size_of_one"
        android:background="@color/violet"
        android:gravity="center"
        android:text="@string/text_violet"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />


</LinearLayout>